Further Maven specification and lamdbaj integration (currently faulty due to lambdaj bug?)
git-svn-id: http://svn.code.sf.net/p/agilereview/code/AgileReview_project/branches/new_architecture@1167 d30e6b9e-d291-474e-934b-121ad53275c3